<resources>
    <string name="app_name">Dialog Input testing</string>
    <string name="text_launch_dialog">Show dialog</string>
    <string name="dialog_title">Enter your name</string>
    <string name="text_ok">Ok</string>
</resources>